Fix logo spacing

--- a/style/_source/region/header.scss
+++ b/style/_source/region/header.scss
@@ -14,6 +14,8 @@
 .logo .blocklink {
     @include rem("line-height", $t-lineheight);
     border-left: 5px solid $c-green-dk;
+    padding-top: 0;
+    padding-bottom: 0;
 
     &:hover {
         background-color: transparent;
