--- a/style/site.css
+++ b/style/site.css
@@ -1475,6 +1475,8 @@ hr {
   line-height: 26px;
   line-height: 2.6rem;
   border-left: 5px solid #7db578;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 .logo .blocklink:hover {
   background-color: transparent;
